# ksh

./: .ksh.toml  .kshrc  Cargo.toml  LICENSE  README.md  example.kshrc  notes.md
src/: config.rs  main.rs
