[package]
name = "ksh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shell-words = "1.1.0"
atty = "0.2"
colored = "2.0.4"
whoami = "1.4.1"
toml = "0.7.6"
serde = "1.0.188"
serde_derive = "1.0.188"
dirs = "2.0"
